# projeto_crud

./: docker-compose.yml  pyproject.toml
