[tool.poetry]
name = "projeto"
version = "0.1.0"
description = ""
authors = ["Samuel Lima <osamuellimaesilva@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12.1"
sqlalchemy = "^2.0.36"
pydantic = "^2.9.2"
fastapi = "^0.115.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
